Switched mousedown to pointerdown to hopefully avoid input delay on mobile.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ html, body {
   height: 100vh;
 }
 
+canvas {
+  touch-action: none;
+}
+
 #header {
   background: #111;
 }
